--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>If-Else</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <div class="flex">
-    <h1>Even Or Odd Checker</h1>
-    <p>Enter any number:</p>
+    <h1 class="h">Even Or Odd Checker</h1>
+    <p class="pa">Enter any number:</p>
     <input class="input" type="text" placeholder="Enter any number">
     <button onclick="check()" class="check">Check</button>
-    <h2>This is:</h2>
+    <p class="pa2">This is:</p> 
     <input id="output" type="text"/>
 </div>
-    <script src="/ifelse.js"></script>
+</div>
+    <script src="app.js"></script>
 </body>
 </html>
